--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swi</title>
   </head>
-  <body>
+  <body class="antialiased text-slate-700 dark:text-slate-300 bg-white dark:bg-slate-900">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
